// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerateViewConfigJs can generate fixture ARRAY_PROPS 1`] = `
Map {
  "ARRAY_PROPSNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @flow
 */

'use strict';

const ReactNativeViewConfigRegistry = require('ReactNativeViewConfigRegistry');
const ReactNativeViewViewConfig = require('ReactNativeViewViewConfig');

const ArrayPropsNativeComponentViewConfig = {
  uiViewClassName: 'ArrayPropsNativeComponent',
  Commands: {},

  bubblingEventTypes: {
    ...ReactNativeViewViewConfig.bubblingEventTypes
  },

  directEventTypes: {
    ...ReactNativeViewViewConfig.directEventTypes
  },

  validAttributes: {
    ...ReactNativeViewViewConfig.validAttributes,
    names: true,
    disableds: true,
    progress: true,
    radii: true,
    colors: true,
    srcs: true,
    points: true
  }
};

ReactNativeViewConfigRegistry.register(
  'ArrayPropsNativeComponent',
  () => ArrayPropsNativeComponentViewConfig,
);

module.exports = 'ArrayPropsNativeComponent';
",
}
`;

exports[`GenerateViewConfigJs can generate fixture BOOLEAN_PROP 1`] = `
Map {
  "BOOLEAN_PROPNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @flow
 */

'use strict';

const ReactNativeViewConfigRegistry = require('ReactNativeViewConfigRegistry');
const ReactNativeViewViewConfig = require('ReactNativeViewViewConfig');

const BooleanPropNativeComponentViewConfig = {
  uiViewClassName: 'BooleanPropNativeComponent',
  Commands: {},

  bubblingEventTypes: {
    ...ReactNativeViewViewConfig.bubblingEventTypes
  },

  directEventTypes: {
    ...ReactNativeViewViewConfig.directEventTypes
  },

  validAttributes: {
    ...ReactNativeViewViewConfig.validAttributes,
    disabled: true
  }
};

ReactNativeViewConfigRegistry.register(
  'BooleanPropNativeComponent',
  () => BooleanPropNativeComponentViewConfig,
);

module.exports = 'BooleanPropNativeComponent';
",
}
`;

exports[`GenerateViewConfigJs can generate fixture COLOR_PROP 1`] = `
Map {
  "COLOR_PROPNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @flow
 */

'use strict';

const ReactNativeViewConfigRegistry = require('ReactNativeViewConfigRegistry');
const ReactNativeViewViewConfig = require('ReactNativeViewViewConfig');

const ColorPropNativeComponentViewConfig = {
  uiViewClassName: 'ColorPropNativeComponent',
  Commands: {},

  bubblingEventTypes: {
    ...ReactNativeViewViewConfig.bubblingEventTypes
  },

  directEventTypes: {
    ...ReactNativeViewViewConfig.directEventTypes
  },

  validAttributes: {
    ...ReactNativeViewViewConfig.validAttributes,
    tintColor: { process: require('processColor') }
  }
};

ReactNativeViewConfigRegistry.register(
  'ColorPropNativeComponent',
  () => ColorPropNativeComponentViewConfig,
);

module.exports = 'ColorPropNativeComponent';
",
}
`;

exports[`GenerateViewConfigJs can generate fixture ENUM_PROP 1`] = `
Map {
  "ENUM_PROPNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @flow
 */

'use strict';

const ReactNativeViewConfigRegistry = require('ReactNativeViewConfigRegistry');
const ReactNativeViewViewConfig = require('ReactNativeViewViewConfig');

const EnumPropsNativeComponentViewConfig = {
  uiViewClassName: 'EnumPropsNativeComponent',
  Commands: {},

  bubblingEventTypes: {
    ...ReactNativeViewViewConfig.bubblingEventTypes
  },

  directEventTypes: {
    ...ReactNativeViewViewConfig.directEventTypes
  },

  validAttributes: {
    ...ReactNativeViewViewConfig.validAttributes,
    alignment: true
  }
};

ReactNativeViewConfigRegistry.register(
  'EnumPropsNativeComponent',
  () => EnumPropsNativeComponentViewConfig,
);

module.exports = 'EnumPropsNativeComponent';
",
}
`;

exports[`GenerateViewConfigJs can generate fixture EVENT_NESTED_OBJECT_PROPS 1`] = `
Map {
  "EVENT_NESTED_OBJECT_PROPSNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @flow
 */

'use strict';

const ReactNativeViewConfigRegistry = require('ReactNativeViewConfigRegistry');
const ReactNativeViewViewConfig = require('ReactNativeViewViewConfig');

const EventsNestedObjectNativeComponentViewConfig = {
  uiViewClassName: 'EventsNestedObjectNativeComponent',
  Commands: {},

  bubblingEventTypes: {
    ...ReactNativeViewViewConfig.bubblingEventTypes,

    topChange: {
      phasedRegistrationNames: {
        captured: 'onChangeCapture',
        bubbled: 'onChange'
      }
    }
  },

  directEventTypes: {
    ...ReactNativeViewViewConfig.directEventTypes
  },

  validAttributes: {
    ...ReactNativeViewViewConfig.validAttributes,
    disabled: true,
    onChange: true
  }
};

ReactNativeViewConfigRegistry.register(
  'EventsNestedObjectNativeComponent',
  () => EventsNestedObjectNativeComponentViewConfig,
);

module.exports = 'EventsNestedObjectNativeComponent';
",
}
`;

exports[`GenerateViewConfigJs can generate fixture EVENT_PROPS 1`] = `
Map {
  "EVENT_PROPSNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @flow
 */

'use strict';

const ReactNativeViewConfigRegistry = require('ReactNativeViewConfigRegistry');
const ReactNativeViewViewConfig = require('ReactNativeViewViewConfig');

const EventsNativeComponentViewConfig = {
  uiViewClassName: 'EventsNativeComponent',
  Commands: {},

  bubblingEventTypes: {
    ...ReactNativeViewViewConfig.bubblingEventTypes,

    topChange: {
      phasedRegistrationNames: {
        captured: 'onChangeCapture',
        bubbled: 'onChange'
      }
    }
  },

  directEventTypes: {
    ...ReactNativeViewViewConfig.directEventTypes,

    onEventDirect: {
      registrationName: 'onEventDirect'
    }
  },

  validAttributes: {
    ...ReactNativeViewViewConfig.validAttributes,
    disabled: true,
    onChange: true,
    onEventDirect: true
  }
};

ReactNativeViewConfigRegistry.register(
  'EventsNativeComponent',
  () => EventsNativeComponentViewConfig,
);

module.exports = 'EventsNativeComponent';
",
}
`;

exports[`GenerateViewConfigJs can generate fixture FLOAT_PROPS 1`] = `
Map {
  "FLOAT_PROPSNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @flow
 */

'use strict';

const ReactNativeViewConfigRegistry = require('ReactNativeViewConfigRegistry');
const ReactNativeViewViewConfig = require('ReactNativeViewViewConfig');

const FloatPropNativeComponentViewConfig = {
  uiViewClassName: 'FloatPropNativeComponent',
  Commands: {},

  bubblingEventTypes: {
    ...ReactNativeViewViewConfig.bubblingEventTypes
  },

  directEventTypes: {
    ...ReactNativeViewViewConfig.directEventTypes
  },

  validAttributes: {
    ...ReactNativeViewViewConfig.validAttributes,
    blurRadius: true,
    blurRadius2: true,
    blurRadius3: true,
    blurRadius4: true,
    blurRadius5: true,
    blurRadius6: true
  }
};

ReactNativeViewConfigRegistry.register(
  'FloatPropNativeComponent',
  () => FloatPropNativeComponentViewConfig,
);

module.exports = 'FloatPropNativeComponent';
",
}
`;

exports[`GenerateViewConfigJs can generate fixture IMAGE_PROP 1`] = `
Map {
  "IMAGE_PROPNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @flow
 */

'use strict';

const ReactNativeViewConfigRegistry = require('ReactNativeViewConfigRegistry');
const ReactNativeViewViewConfig = require('ReactNativeViewViewConfig');

const ImagePropNativeComponentViewConfig = {
  uiViewClassName: 'ImagePropNativeComponent',
  Commands: {},

  bubblingEventTypes: {
    ...ReactNativeViewViewConfig.bubblingEventTypes
  },

  directEventTypes: {
    ...ReactNativeViewViewConfig.directEventTypes
  },

  validAttributes: {
    ...ReactNativeViewViewConfig.validAttributes,
    thumbImage: { process: require('resolveAssetSource') }
  }
};

ReactNativeViewConfigRegistry.register(
  'ImagePropNativeComponent',
  () => ImagePropNativeComponentViewConfig,
);

module.exports = 'ImagePropNativeComponent';
",
}
`;

exports[`GenerateViewConfigJs can generate fixture INTEGER_PROPS 1`] = `
Map {
  "INTEGER_PROPSNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @flow
 */

'use strict';

const ReactNativeViewConfigRegistry = require('ReactNativeViewConfigRegistry');
const ReactNativeViewViewConfig = require('ReactNativeViewViewConfig');

const IntegerPropNativeComponentViewConfig = {
  uiViewClassName: 'IntegerPropNativeComponent',
  Commands: {},

  bubblingEventTypes: {
    ...ReactNativeViewViewConfig.bubblingEventTypes
  },

  directEventTypes: {
    ...ReactNativeViewViewConfig.directEventTypes
  },

  validAttributes: {
    ...ReactNativeViewViewConfig.validAttributes,
    progress1: true,
    progress2: true,
    progress3: true
  }
};

ReactNativeViewConfigRegistry.register(
  'IntegerPropNativeComponent',
  () => IntegerPropNativeComponentViewConfig,
);

module.exports = 'IntegerPropNativeComponent';
",
}
`;

exports[`GenerateViewConfigJs can generate fixture INTERFACE_ONLY 1`] = `
Map {
  "INTERFACE_ONLYNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @flow
 */

'use strict';

const ReactNativeViewConfigRegistry = require('ReactNativeViewConfigRegistry');
const ReactNativeViewViewConfig = require('ReactNativeViewViewConfig');

const InterfaceOnlyComponentViewConfig = {
  uiViewClassName: 'InterfaceOnlyComponent',
  Commands: {},

  bubblingEventTypes: {
    ...ReactNativeViewViewConfig.bubblingEventTypes,

    topChange: {
      phasedRegistrationNames: {
        captured: 'onChangeCapture',
        bubbled: 'onChange'
      }
    }
  },

  directEventTypes: {
    ...ReactNativeViewViewConfig.directEventTypes
  },

  validAttributes: {
    ...ReactNativeViewViewConfig.validAttributes,
    accessibilityHint: true,
    onChange: true
  }
};

ReactNativeViewConfigRegistry.register(
  'InterfaceOnlyComponent',
  () => InterfaceOnlyComponentViewConfig,
);

module.exports = 'InterfaceOnlyComponent';
",
}
`;

exports[`GenerateViewConfigJs can generate fixture MULTI_NATIVE_PROP 1`] = `
Map {
  "MULTI_NATIVE_PROPNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @flow
 */

'use strict';

const ReactNativeViewConfigRegistry = require('ReactNativeViewConfigRegistry');
const ReactNativeViewViewConfig = require('ReactNativeViewViewConfig');

const ImageColorPropNativeComponentViewConfig = {
  uiViewClassName: 'ImageColorPropNativeComponent',
  Commands: {},

  bubblingEventTypes: {
    ...ReactNativeViewViewConfig.bubblingEventTypes
  },

  directEventTypes: {
    ...ReactNativeViewViewConfig.directEventTypes
  },

  validAttributes: {
    ...ReactNativeViewViewConfig.validAttributes,
    thumbImage: { process: require('resolveAssetSource') },
    color: { process: require('processColor') },
    thumbTintColor: { process: require('processColor') },
    point: { diff: require('pointsDiffer') }
  }
};

ReactNativeViewConfigRegistry.register(
  'ImageColorPropNativeComponent',
  () => ImageColorPropNativeComponentViewConfig,
);

module.exports = 'ImageColorPropNativeComponent';
",
}
`;

exports[`GenerateViewConfigJs can generate fixture POINT_PROP 1`] = `
Map {
  "POINT_PROPNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @flow
 */

'use strict';

const ReactNativeViewConfigRegistry = require('ReactNativeViewConfigRegistry');
const ReactNativeViewViewConfig = require('ReactNativeViewViewConfig');

const PointPropNativeComponentViewConfig = {
  uiViewClassName: 'PointPropNativeComponent',
  Commands: {},

  bubblingEventTypes: {
    ...ReactNativeViewViewConfig.bubblingEventTypes
  },

  directEventTypes: {
    ...ReactNativeViewViewConfig.directEventTypes
  },

  validAttributes: {
    ...ReactNativeViewViewConfig.validAttributes,
    startPoint: { diff: require('pointsDiffer') }
  }
};

ReactNativeViewConfigRegistry.register(
  'PointPropNativeComponent',
  () => PointPropNativeComponentViewConfig,
);

module.exports = 'PointPropNativeComponent';
",
}
`;

exports[`GenerateViewConfigJs can generate fixture STRING_PROP 1`] = `
Map {
  "STRING_PROPNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @flow
 */

'use strict';

const ReactNativeViewConfigRegistry = require('ReactNativeViewConfigRegistry');
const ReactNativeViewViewConfig = require('ReactNativeViewViewConfig');

const StringPropComponentViewConfig = {
  uiViewClassName: 'StringPropComponent',
  Commands: {},

  bubblingEventTypes: {
    ...ReactNativeViewViewConfig.bubblingEventTypes
  },

  directEventTypes: {
    ...ReactNativeViewViewConfig.directEventTypes
  },

  validAttributes: {
    ...ReactNativeViewViewConfig.validAttributes,
    accessibilityHint: true
  }
};

ReactNativeViewConfigRegistry.register(
  'StringPropComponent',
  () => StringPropComponentViewConfig,
);

module.exports = 'StringPropComponent';
",
}
`;

exports[`GenerateViewConfigJs can generate fixture TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "TWO_COMPONENTS_DIFFERENT_FILESNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @flow
 */

'use strict';

const ReactNativeViewConfigRegistry = require('ReactNativeViewConfigRegistry');
const ReactNativeViewViewConfig = require('ReactNativeViewViewConfig');

const MultiFile1NativeComponentViewConfig = {
  uiViewClassName: 'MultiFile1NativeComponent',
  Commands: {},

  bubblingEventTypes: {
    ...ReactNativeViewViewConfig.bubblingEventTypes
  },

  directEventTypes: {
    ...ReactNativeViewViewConfig.directEventTypes
  },

  validAttributes: {
    ...ReactNativeViewViewConfig.validAttributes,
    disabled: true
  }
};

ReactNativeViewConfigRegistry.register(
  'MultiFile1NativeComponent',
  () => MultiFile1NativeComponentViewConfig,
);

module.exports = 'MultiFile1NativeComponent';

const MultiFile2NativeComponentViewConfig = {
  uiViewClassName: 'MultiFile2NativeComponent',
  Commands: {},

  bubblingEventTypes: {
    ...ReactNativeViewViewConfig.bubblingEventTypes
  },

  directEventTypes: {
    ...ReactNativeViewViewConfig.directEventTypes
  },

  validAttributes: {
    ...ReactNativeViewViewConfig.validAttributes,
    disabled: true
  }
};

ReactNativeViewConfigRegistry.register(
  'MultiFile2NativeComponent',
  () => MultiFile2NativeComponentViewConfig,
);

module.exports = 'MultiFile2NativeComponent';
",
}
`;

exports[`GenerateViewConfigJs can generate fixture TWO_COMPONENTS_SAME_FILE 1`] = `
Map {
  "TWO_COMPONENTS_SAME_FILENativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @flow
 */

'use strict';

const ReactNativeViewConfigRegistry = require('ReactNativeViewConfigRegistry');
const ReactNativeViewViewConfig = require('ReactNativeViewViewConfig');

const MultiComponent1NativeComponentViewConfig = {
  uiViewClassName: 'MultiComponent1NativeComponent',
  Commands: {},

  bubblingEventTypes: {
    ...ReactNativeViewViewConfig.bubblingEventTypes
  },

  directEventTypes: {
    ...ReactNativeViewViewConfig.directEventTypes
  },

  validAttributes: {
    ...ReactNativeViewViewConfig.validAttributes,
    disabled: true
  }
};

ReactNativeViewConfigRegistry.register(
  'MultiComponent1NativeComponent',
  () => MultiComponent1NativeComponentViewConfig,
);

module.exports = 'MultiComponent1NativeComponent';

const MultiComponent2NativeComponentViewConfig = {
  uiViewClassName: 'MultiComponent2NativeComponent',
  Commands: {},

  bubblingEventTypes: {
    ...ReactNativeViewViewConfig.bubblingEventTypes
  },

  directEventTypes: {
    ...ReactNativeViewViewConfig.directEventTypes
  },

  validAttributes: {
    ...ReactNativeViewViewConfig.validAttributes,
    disabled: true
  }
};

ReactNativeViewConfigRegistry.register(
  'MultiComponent2NativeComponent',
  () => MultiComponent2NativeComponentViewConfig,
);

module.exports = 'MultiComponent2NativeComponent';
",
}
`;
